talos-cluster/flux/apps/ocidex/dev/main/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: ocidex-dev
    namespace: ocidex-dev
spec:
    parentRefs:
        - name: cloudflare-gateway
          namespace: cloudflare-gateway
    hostnames:
        - ocidex.app
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /api
              - path:
                    type: PathPrefix
                    value: /auth
          backendRefs:
              - name: ocidex-dev-api
                port: 80
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: ocidex-dev-web
                port: 80
